Добавление формы поиска в 1ю таблицу "Организация"

--- a/index.html
+++ b/index.html
@@ -399,10 +399,8 @@
         <div class="cont_left" id="article1">
             <div class="table1">
     <ul class="thead">
-        <li style="width: 1px">№</li>
-        <li>
-            <h1>Организация</h1>
-        </li>
+        <li style="width:1px">№</li>
+        <li><h1>Организация</h1><input type="text" class="form1_search" placeholder="Поиск организаций"></li>
         <li style="width: 1px">Код<br>организации</li>
         <li style="text-align: center; width: 1px;">Ред.</li>
     </ul>
