В 1ю таблицу добавлено общее кол-во организаций "Всего организаций"

--- a/index.html
+++ b/index.html
@@ -512,7 +512,10 @@
             <div class="table1">
     <ul class="thead">
         <li style="width:1px">№</li>
-        <li><h1>Организация</h1><input type="text" class="form1_search" placeholder="Поиск организаций"></li>
+        <li>
+        <h1>Организация</h1><input type="text" class="form1_search" placeholder="Поиск организаций">
+        <div class="note1" style="margin: 5px 0 -11px 3px">Всего организаций: <strong>109</strong></div>
+        </li>
         <li style="width: 1px">Код<br>организации</li>
         <li style="text-align: center; width: 1px;">Ред.</li>
     </ul>
