--- a/privazka_askp.htm
+++ b/privazka_askp.htm
@@ -5,13 +5,13 @@
 <head>
     <title></title>
     <meta charset="utf-8">
-    <script src="/Content/admin-content/js/jquery.min.js"></script>
+    <script src="http://89.31.20.102:50000/Content/admin-content/js/jquery.min.js"></script>
 
-    <link href="/Content/admin-content/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <script src="/Content/admin-content/js/bootstrap.min.js"></script>
-    <link href="/Content/admin-content/css/style.css" rel="stylesheet" type="text/css">
+    <link href="http://89.31.20.102:50000/Content/admin-content/css/bootstrap.min.css" rel="stylesheet" type="text/css"http://89.31.20.102:50000/>
+    <script src="http://89.31.20.102:50000/Content/admin-content/js/bootstrap.min.js"></script>
+    <link href="http://89.31.20.102:50000/Content/admin-content/css/style.css" rel="stylesheet" type="text/css">
 
-    <script src="/Scripts/input-mask/jquery.maskedinput.min.js"></script>
+    <script src="http://89.31.20.102:50000/Scripts/input-mask/jquery.maskedinput.min.js"></script>
 </head>
 <body>
 
@@ -21,15 +21,15 @@
     <ul>
         <li style="background-color: #fff; width: 1px;">
             <div class="logo">
-                <a href="#"><img src="/Content/admin-content/css/img/logo.png"></a>
+                <a href="#"><img src="http://89.31.20.102:50000/Content/admin-content/css/img/logo.png"></a>
             </div><span class="logo_tit">Мониторинг цистерн</span></li>
         <li style="text-align: right">
             <div class="head_menu">
-                <a href="/">ТЕКУЩИЕ ДАННЫЕ (НАВИГАЦИЯ)</a>
-                <a href="/Monitoring/AskpEgais">ИСТОРИЯ(АСКП/ЕГАИС)</a>
-                <a href="/Monitoring/GpsPointsCache">КЭШ АНАЛИЗАТОР</a>
+                <a href="http://89.31.20.102:50000/">ТЕКУЩИЕ ДАННЫЕ (НАВИГАЦИЯ)</a>
+                <a href="http://89.31.20.102:50000/Monitoring/AskpEgais">ИСТОРИЯ(АСКП/ЕГАИС)</a>
+                <a href="http://89.31.20.102:50000/Monitoring/GpsPointsCache">КЭШ АНАЛИЗАТОР</a>
 
-                <a href="/Home/Logout">test999 [Выйти]</a>
+                <a href="http://89.31.20.102:50000/Home/Logout">test999 [Выйти]</a>
             </div>
         </li>
     </ul>
@@ -37,18 +37,18 @@
 
     <nav class="admin-top-navbar">
     <ul>
-        <li><a href="/Admin" >Организации и контроллеры</a></li>
+        <li><a href="http://89.31.20.102:50000/Admin" >Организации и контроллеры</a></li>
         <li class="menu_lines2"></li>
-        <li><a href="/Admin/UserRoles">Роли и пользователи</a></li>
+        <li><a href="http://89.31.20.102:50000/Admin/UserRoles">Роли и пользователи</a></li>
         <li class="menu_lines2"></li>
-        <li><a href="/Admin/UserBindingsToOrgs">Привязка организаций к пользователям</a></li>
+        <li><a href="http://89.31.20.102:50000/Admin/UserBindingsToOrgs">Привязка организаций к пользователям</a></li>
     </ul>
 </nav>
 
 <script>  
 
       
-    var url = "/Admin/UserBindingsToOrgs";
+    var url = "http://89.31.20.102:50000/Admin/UserBindingsToOrgs";
 
     $(".admin-top-navbar li a[href='/Admin/UserBindingsToOrgs']").addClass("active-it");
 </script>
@@ -126,19 +126,19 @@
 
 </div>
     
-    <script src="/Content/admin-content/js/inblockfix.js"></script>
+    <script src="http://89.31.20.102:50000/Content/admin-content/js/inblockfix.js"></script>
 
-    <script src="/Scripts/moment.js"></script>
-    <script src="/Scripts/moment-with-locales.js"></script>
+    <script src="http://89.31.20.102:50000/Scripts/moment.js"></script>
+    <script src="http://89.31.20.102:50000/Scripts/moment-with-locales.js"></script>
 
-    <script src="/Scripts/date.format.js"></script>
+    <script src="http://89.31.20.102:50000/Scripts/date.format.js"></script>
 
-    <link rel="stylesheet" href="/Content/kendo/kendo.common.min.css"/>
-    <link rel="stylesheet" href="/Content/kendo/kendo.default.min.css"/>
-    <link rel="stylesheet" href="/Content/kendo/kendo.common-material.min.css"/>
-    <link rel="stylesheet" href="/Content/kendo/kendo.rtl.min.css"/>
-    <link rel="stylesheet" href="/Content/kendo/kendo.material.min.css"/>
-    <link rel="stylesheet" href="/Content/angular-chart/angular-chart.css"/>
+    <link rel="stylesheet" href="http://89.31.20.102:50000/Content/kendo/kendo.common.min.css"http://89.31.20.102:50000/>
+    <link rel="stylesheet" href="http://89.31.20.102:50000/Content/kendo/kendo.default.min.css"http://89.31.20.102:50000/>
+    <link rel="stylesheet" href="http://89.31.20.102:50000/Content/kendo/kendo.common-material.min.css"http://89.31.20.102:50000/>
+    <link rel="stylesheet" href="http://89.31.20.102:50000/Content/kendo/kendo.rtl.min.css"http://89.31.20.102:50000/>
+    <link rel="stylesheet" href="http://89.31.20.102:50000/Content/kendo/kendo.material.min.css"http://89.31.20.102:50000/>
+    <link rel="stylesheet" href="http://89.31.20.102:50000/Content/angular-chart/angular-chart.css"http://89.31.20.102:50000/>
 
 
 
@@ -146,26 +146,26 @@
 
     <script src='/Scripts/angular.js'></script>
 
-    <script src="/Scripts/objects.js"></script>
+    <script src="http://89.31.20.102:50000/Scripts/objects.js"></script>
 
-    <script src="/Content/kendo/kendo.all.min.js"></script>
-    <script src="/Scripts/cultures/kendo.culture.ru-RU.min.js"></script>
-    <script src="/Content/kendo/kendo-elements.js"></script>
+    <script src="http://89.31.20.102:50000/Content/kendo/kendo.all.min.js"></script>
+    <script src="http://89.31.20.102:50000/Scripts/cultures/kendo.culture.ru-RU.min.js"></script>
+    <script src="http://89.31.20.102:50000/Content/kendo/kendo-elements.js"></script>
 
     <script src='/Scripts/angular-simple-logger.js'></script>
 
-    <script src="/AngularJs/Controllers/organisationController.js"></script>
-    <script src="/AngularJs/Controllers/userBindingController.js"></script>
+    <script src="http://89.31.20.102:50000/AngularJs/Controllers/organisationController.js"></script>
+    <script src="http://89.31.20.102:50000/AngularJs/Controllers/userBindingController.js"></script>
 
-    <script src="/AngularJs/Services/organisationCreateCodeIsUnique.js"></script>
-    <script src="/AngularJs/Services/organisationEditCodeIsUnique.js"></script>
-    <script src="/AngularJs/Directives/create-unique-org-code.js"></script>
-    <script src="/AngularJs/Directives/edit-unique-org-code.js"></script>
-    <script src="/AngularJs/Directives/only-digits.js"></script>
-    <script src="/AngularJs/Directives/isImei.js"></script>
+    <script src="http://89.31.20.102:50000/AngularJs/Services/organisationCreateCodeIsUnique.js"></script>
+    <script src="http://89.31.20.102:50000/AngularJs/Services/organisationEditCodeIsUnique.js"></script>
+    <script src="http://89.31.20.102:50000/AngularJs/Directives/create-unique-org-code.js"></script>
+    <script src="http://89.31.20.102:50000/AngularJs/Directives/edit-unique-org-code.js"></script>
+    <script src="http://89.31.20.102:50000/AngularJs/Directives/only-digits.js"></script>
+    <script src="http://89.31.20.102:50000/AngularJs/Directives/isImei.js"></script>
 
-    <script src="/AngularJs/Filters/aspnetJsonToDate.js"></script>
+    <script src="http://89.31.20.102:50000/AngularJs/Filters/aspnetJsonToDate.js"></script>
 
-<script src="/Scripts/arraySort.js"></script>
+<script src="http://89.31.20.102:50000/Scripts/arraySort.js"></script>
 </body>
 </html>
