--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <head>
     <title></title>
     <meta charset="utf-8">
-    <script src="/Content/admin-content/js/jquery.min.js"></script>
+    <script src="https://centrikt.ru:40001/Content/admin-content/js/jquery.min.js"></script>
 
-    <link href="/Content/admin-content/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <script src="/Content/admin-content/js/bootstrap.min.js"></script>
-    <link href="/Content/admin-content/css/style.css" rel="stylesheet" type="text/css">
+    <link href="https://centrikt.ru:40001/Content/admin-content/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://centrikt.ru:40001/Content/admin-content/js/bootstrap.min.js"></script>
+    <link href="Content/admin-content/css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
@@ -19,15 +19,15 @@
     <ul>
         <li style="background-color: #fff; width: 1px;">
             <div class="logo">
-                <a href="#"><img src="/Content/admin-content/css/img/logo.png"></a>
+                <a href="#"><img src="https://centrikt.ru:40001/Content/admin-content/css/img/logo.png"></a>
             </div><span class="logo_tit">Мониторинг цистерн</span></li>
         <li style="text-align: right">
             <div class="head_menu">
-                <a href="/">ТЕКУЩИЕ ДАННЫЕ (НАВИГАЦИЯ)</a>
-                <a href="/Monitoring/AskpEgais">ИСТОРИЯ(АСКП/ЕГАИС)</a>
-                <a href="/Monitoring/GpsPointsCache">КЭШ АНАЛИЗАТОР</a>
+                <a href="https://centrikt.ru:40001/">ТЕКУЩИЕ ДАННЫЕ (НАВИГАЦИЯ)</a>
+                <a href="https://centrikt.ru:40001/Monitoring/AskpEgais">ИСТОРИЯ(АСКП/ЕГАИС)</a>
+                <a href="https://centrikt.ru:40001/Monitoring/GpsPointsCache">КЭШ АНАЛИЗАТОР</a>
 
-                <a href="/Home/Logout">test999 [Выйти]</a>
+                <a href="https://centrikt.ru:40001/Home/Logout">test999 [Выйти]</a>
             </div>
         </li>
     </ul>
@@ -164,7 +164,7 @@
             <div class="modal-body">
                 <!-- Modal content-->
                 <div class="formscont">
-                    <input type="hidden" ng-model="CreateControllerModel.OrganisationCode"/>
+                    <input type="hidden" ng-model="CreateControllerModel.OrganisationCode"https://centrikt.ru:40001/>
 
 
                     <div>
@@ -490,19 +490,19 @@
 
 </div>
     
-    <script src="/Content/admin-content/js/inblockfix.js"></script>
+    <script src="https://centrikt.ru:40001/Content/admin-content/js/inblockfix.js"></script>
 
-    <script src="/Scripts/moment.js"></script>
-    <script src="/Scripts/moment-with-locales.js"></script>
+    <script src="https://centrikt.ru:40001/Scripts/moment.js"></script>
+    <script src="https://centrikt.ru:40001/Scripts/moment-with-locales.js"></script>
 
-    <script src="/Scripts/date.format.js"></script>
+    <script src="https://centrikt.ru:40001/Scripts/date.format.js"></script>
 
-    <link rel="stylesheet" href="/Content/kendo/kendo.common.min.css"/>
-    <link rel="stylesheet" href="/Content/kendo/kendo.default.min.css"/>
-    <link rel="stylesheet" href="/Content/kendo/kendo.common-material.min.css"/>
-    <link rel="stylesheet" href="/Content/kendo/kendo.rtl.min.css"/>
-    <link rel="stylesheet" href="/Content/kendo/kendo.material.min.css"/>
-    <link rel="stylesheet" href="/Content/angular-chart/angular-chart.css"/>
+    <link rel="stylesheet" href="https://centrikt.ru:40001/Content/kendo/kendo.common.min.css"https://centrikt.ru:40001/>
+    <link rel="stylesheet" href="https://centrikt.ru:40001/Content/kendo/kendo.default.min.css"https://centrikt.ru:40001/>
+    <link rel="stylesheet" href="https://centrikt.ru:40001/Content/kendo/kendo.common-material.min.css"https://centrikt.ru:40001/>
+    <link rel="stylesheet" href="https://centrikt.ru:40001/Content/kendo/kendo.rtl.min.css"https://centrikt.ru:40001/>
+    <link rel="stylesheet" href="https://centrikt.ru:40001/Content/kendo/kendo.material.min.css"https://centrikt.ru:40001/>
+    <link rel="stylesheet" href="https://centrikt.ru:40001/Content/angular-chart/angular-chart.css"https://centrikt.ru:40001/>
 
 
 
@@ -510,19 +510,19 @@
 
     <script src='/Scripts/angular.js'></script>
 
-    <script src="/Scripts/objects.js"></script>
+    <script src="https://centrikt.ru:40001/Scripts/objects.js"></script>
 
-    <script src="/Content/kendo/kendo.all.min.js"></script>
-    <script src="/Scripts/cultures/kendo.culture.ru-RU.min.js"></script>
-    <script src="/Content/kendo/kendo-elements.js"></script>
+    <script src="https://centrikt.ru:40001/Content/kendo/kendo.all.min.js"></script>
+    <script src="https://centrikt.ru:40001/Scripts/cultures/kendo.culture.ru-RU.min.js"></script>
+    <script src="https://centrikt.ru:40001/Content/kendo/kendo-elements.js"></script>
 
     <script src='/Scripts/angular-simple-logger.js'></script>
-    <script src="/AngularJs/Controllers/organisationController.js"></script>
-    <script src="/AngularJs/Services/organisationCreateCodeIsUnique.js"></script>
-    <script src="/AngularJs/Services/organisationEditCodeIsUnique.js"></script>
-    <script src="/AngularJs/Directives/create-unique-org-code.js"></script>
-    <script src="/AngularJs/Directives/edit-unique-org-code.js"></script>
-    <script src="/AngularJs/Directives/only-digits.js"></script>
+    <script src="https://centrikt.ru:40001/AngularJs/Controllers/organisationController.js"></script>
+    <script src="https://centrikt.ru:40001/AngularJs/Services/organisationCreateCodeIsUnique.js"></script>
+    <script src="https://centrikt.ru:40001/AngularJs/Services/organisationEditCodeIsUnique.js"></script>
+    <script src="https://centrikt.ru:40001/AngularJs/Directives/create-unique-org-code.js"></script>
+    <script src="https://centrikt.ru:40001/AngularJs/Directives/edit-unique-org-code.js"></script>
+    <script src="https://centrikt.ru:40001/AngularJs/Directives/only-digits.js"></script>
     
 </body>
 </html>
